--- a/rickroll2.html
+++ b/rickroll2.html
@@ -26,7 +26,7 @@
     <meta name="twitter:data2" content="1 minute">
     <meta http-equiv="Refresh" content="1; url=https://www.youtube.com/watch?v=dQw4w9WgXcQ" />
 </head>
-
-<p>
-    Phising training for the masses! This is a stager for a rick roll. <br> @hackenschere
-</p>
+<body>
+    <img src="https://about.twitter.com/content/dam/about-twitter/x/brand-toolkit/logo-black.png.twimg.1920.png">
+    <p>Phising training for the masses! This is a stager for a rick roll. <br> @hackenschere</p>
+</body>
